[DSR-67] Fixing clipped descenders inside form fields (#25)

--- a/scss/elements/_forms.scss
+++ b/scss/elements/_forms.scss
@@ -29,7 +29,7 @@ select {
   font-size: rem($body-text-size);
   font-weight: 300;
   letter-spacing: .4px;
-  line-height: 1;
+  line-height: $body-line-height;
   outline: 0;
   padding: 20px 15px 18px;
   width: 100%;
